change overflow-x to clip to avoid sticky desactivation

--- a/nextjs/src/app/globals.css
+++ b/nextjs/src/app/globals.css
@@ -124,10 +124,10 @@ body {
   background: var(--color-background);
   color: var(--color-foreground);
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
